llvm/test/MC/AMDGPU/gfx940_err_pos.s
// RUN: not llvm-mc -arch=amdgcn -mcpu=gfx940 %s 2>&1 | FileCheck %s --implicit-check-not=error: --strict-whitespace

//==============================================================================
// instruction must not use sc0

global_atomic_or v[0:1], v2, off sc1 nt sc0
// CHECK: error: instruction must not use sc0
// CHECK-NEXT:{{^}}global_atomic_or v[0:1], v2, off sc1 nt sc0
// CHECK-NEXT:{{^}}                                        ^

global_atomic_or v[0:1], v2, off sc0 sc1 nt
// CHECK: error: instruction must not use sc0
// CHECK-NEXT:{{^}}global_atomic_or v[0:1], v2, off sc0 sc1 nt
// CHECK-NEXT:{{^}}                                 ^
